# constructive_feedback

./: .gitignore  .gitmodules  CLAUDE.md  HACKATHON.md  MUJOCO_LOG.TXT  README.md  TRAINING.md
core/: .env.example  Makefile  main.py  pyproject.toml
core/orchestration/: blueprint_parser.py  contracts.py  coordinator.py  graph.py  mujoco_adapter.py  sequencer.py  validator.py
core/orchestration/blueprints/: comm_tower.json  honeycomb_shield.json  hybrid_igloo.json  vertical_egg.json
core/robot_env/: hud_arm_bridge.py  hud_env.py  hud_mujoco_bridge.py  hud_printer_bridge.py  live_runner.py  mars_scene.xml  mars_scene_mobile.xml  mars_scene_swarm.xml  printer_scene.xml  record_dataset.py  rover_nav.py  run_arm_demo.py  run_hud_demo.py  run_nav_demo.py  run_printer_demo.py  run_shared_printer_demo.py  run_swarm_demo.py  run_swarm_vla.py  simulate_rover.py  swarm_agents.py  swarm_bridge.py  swarm_hud_env.py  swarm_manip_bridge.py  train_printer.py  visualize_swarm.py
core/robot_env/habitat/: habitat_p1.stl  habitat_p2.stl
core/robot_env/rocket/: chandra.stl  sls_decimated.stl
core/robot_env/rover/meshes/Base/: Base_collision.STL  Base_stand.STL
core/robot_env/rover/meshes/Forearm/: Forearm_arm.STL
core/robot_env/rover/meshes/Gripper/gears/idol/: Idol_Gear_B.STL
core/robot_env/rover/meshes/Gripper/gears/idol/collisions/: Idol_Gear_B_collision.STL  Idol_Gear_B_collision_t1.STL  Idol_Gear_B_collision_t2.STL  Idol_Gear_B_collision_t5.STL  Idol_Gear_B_collision_t9.STL
core/robot_env/rover/meshes/Gripper/gears/servo/: Servo_Gear_B.STL
core/robot_env/rover/meshes/Gripper/gears/servo/collisions/: Servo_Gear_B_collision_t2.STL  Servo_Gear_B_collision_t3.STL  Servo_Gear_B_collision_t7.STL
core/robot_env/rover/meshes/Gripper/grippers/collisions/: Gripper Left B collision 2.STL
core/robot_env/rover/meshes/Gripper/pivot/: Pivot Arm B.STL
core/robot_env/rover/meshes/Gripper/plates/: Bottom Plate C.STL
core/robot_env/rover/meshes/Hand/: Hand_arm.STL
core/robot_env/rover/meshes/Hindarm/: Hindarm_attachments.STL  Hindarm_motor.STL  Hindarm_pulley.STL
core/robot_env/rover/meshes/Hip/: Hip_attachments.STL  Hip_motors_ends.STL
core/robot_env/rover/meshes/Wrist/: Wrist_attachments.STL
core/robot_env/rover/models/: Gripper.xml  Hip.xml  Wrist.xml  materials.xml
core/robot_env/serve/: pi05_modal_mars.py  policy_server_mars.py
core/tests/: smoke_test.py
core/train/: rl_loop.py  sft_modal.py
frontend/: .env.local.example  .gitignore  DESIGN.md  MINIMAX_VIDEO_TEST.md  netlify.toml  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: generate-mars-video.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/minimax-music/: route.ts
frontend/src/app/api/minimax-video/: route.ts
frontend/src/app/habitat-selection/: page.tsx
frontend/src/app/live-construction/: page.tsx
frontend/src/app/simulation/[id]/: page.tsx
frontend/src/components/: BlueprintCard.tsx
frontend/src/components/autobuild/: AutobuildExperience.tsx  AutobuildHero.tsx  BlueprintCard.tsx  BlueprintGallery.tsx  BlueprintVisual.tsx  BuildPreviewPanel.tsx  HabitatSelectionScreen.tsx  LiveConstructionView.tsx  StatusMetric.tsx
frontend/src/data/: blueprints.ts
frontend/src/lib/: api.ts
frontend/src/types/: blueprint.ts
orchestration/: contracts.py  coordinator.py  env_interface.py  graph.py  monitor.py  sequencer.py
orchestration/blueprints/: habitat_dome.json  landing_pad.json
robot_env/: hud_env.py  hud_mujoco_bridge.py  mars_scene.xml  requirements-hud.txt  run_arm_demo.py  simulate_rover.py
robot_env/rover/: main.xml
robot_env/rover/meshes/Base/: Base_motor.STL  Base_wood.STL
robot_env/rover/meshes/Gripper/gears/idol/collisions/: Idol_Gear_B_collision_t10.STL  Idol_Gear_B_collision_t3.STL  Idol_Gear_B_collision_t4.STL  Idol_Gear_B_collision_t6.STL  Idol_Gear_B_collision_t7.STL  Idol_Gear_B_collision_t8.STL
robot_env/rover/meshes/Gripper/gears/servo/collisions/: Servo_Gear_B_collision.STL  Servo_Gear_B_collision_t1.STL  Servo_Gear_B_collision_t4.STL  Servo_Gear_B_collision_t5.STL  Servo_Gear_B_collision_t6.STL  Servo_Gear_B_collision_t8.STL
robot_env/rover/meshes/Gripper/grippers/: Gripper Left B.STL
robot_env/rover/meshes/Gripper/grippers/collisions/: Gripper Left B collision 1.STL  Gripper Left B collision 3.STL
robot_env/rover/meshes/Gripper/plates/: Top_Plate_C.STL
robot_env/rover/meshes/Hip/: Hip_body.STL  Hip_motors_mid.STL
robot_env/rover/meshes/Wrist/: Wrist_arm.STL  Wrist_motor.STL  ~$Wrist.SLDASM
robot_env/rover/models/: Base.xml  Forearm.xml  Hand.xml  Hindarm.xml
web/backend/: .env.example  Makefile  agent.py  main.py  pyproject.toml
web/frontend/: .env.local.example  package.json  tailwind.config.ts
web/frontend/src/app/: globals.css  layout.tsx  page.tsx
web/frontend/src/data/: blueprints.ts
