[project]
# All Python lives here: the orchestration Brain, the robot_env MuJoCo sim, and the
# FastAPI/Modal backend (main.py) that drives them. They share one interpreter because
# the API runs the Brain and the adapter imports the sim in-process. (The Modal
# *container* still gets its deps from image.pip_install(...) in main.py — this file is
# the local/dev env.) robot_training is a submodule with its own env.
name = "constructive-feedback-core"
version = "0.1.0"
description = "Orchestration Brain + Mars MuJoCo rover sim + FastAPI/Modal backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    # orchestration Brain
    "langgraph>=0.2.0",         # state machine
    "pydantic>=2.0.0",          # contracts / schemas
    "openai>=1.30.0",           # LLM coordinator (Fireworks, OpenAI-compatible client)
    # robot_env MuJoCo sim
    "mujoco>=3.2.0",            # physics + rendering
    "numpy>=1.26.0",            # state / control
    # FastAPI / Modal backend (main.py)
    "modal>=0.73.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Recording the scripted oracle into a LeRobot v3 dataset (robot_env/record_dataset.py).
# Pinned to the SAME lerobot commit the Modal training images use (pi05-capable; PyPI's
# 0.5.1 lacks pi05) so the dataset is written and read by one version. Heavy (pulls torch).
#   uv sync --extra record
record = ["lerobot[training,pi] @ git+https://github.com/huggingface/lerobot.git@b8ad81bf397d59dda69ccfc7e74e847f0a9d4fbf"]
# Serving the swarm manip task to a VLA over the robot (openpi/0) capability, and the
# eval runner (swarm_hud_env.py, run_swarm_vla.py). Lightweight — no torch:
#   uv sync --extra robot
robot = ["hud-python[robot]>=0.6.5"]
# Remote pi0.5 policy server on a GPU box / Modal (robot_env/serve/*). modal is in the
# base deps; this adds the websocket transport:
#   uv sync --extra serve
serve = ["hud-python[robot]>=0.6.5", "websockets>=12.0"]
# pi0.5 policy classes for in-process / server-side inference (same pinned commit as record):
vla = ["lerobot[training,pi] @ git+https://github.com/huggingface/lerobot.git@b8ad81bf397d59dda69ccfc7e74e847f0a9d4fbf"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.uv]
# Run in place — code is imported via sys.path (see mujoco_adapter / tests / main.py),
# not installed as a package. Mirrors robot_training's layout.
package = false
# The pinned lerobot needs numpy>=2.0; hud's openpi-client caps numpy<2.0, but that cap
# is conservative (the Modal images co-install both on numpy 2.x via pip and run fine).
# Force numpy 2.x so hud + the aligned lerobot can share one local env.
override-dependencies = ["numpy>=2.0.0,<2.3.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
