[project]
name = "mars-construction-backend"
version = "0.1.0"
description = "Mars Construction API — Modal + FastAPI orchestration backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "modal>=0.73.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "openai>=1.30.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
